@startuml
skinparam Style strictuml
skinparam classAttributeIconSize 0

abstract class Command {
    +execute(tradeList, ui, storage)
}

class CompareCommand {
    +execute(tradeList, ui, storage)
}

class StrategyStats {
    +addTrade(rr)
}

class TradeList {
    +isEmpty()
    +size()
    +getTrade(index)
}

class Trade {
    +getStrategy()
    +getRiskRewardRatio()
}

class Ui {
    +showSummaryEmpty()
    +showStrategyComparison(strategyComparison)
}

Command <|-- CompareCommand
CompareCommand ..> TradeList : uses >
CompareCommand ..> Ui : uses >
CompareCommand ..> StrategyStats : uses >
TradeList "1" *--> "*" Trade
Ui ..> StrategyStats : uses >
@enduml
